Fix nav bar overlap with menu icon
Also added some styling to make the site more spacious and readable. Fixed an svg alignment.

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -22,6 +22,7 @@
 	}
 
 	h1 {
+		font-size: 45px;
 		text-transform: uppercase;
 		letter-spacing: .025em;
 	}
@@ -47,7 +48,7 @@
 		text-align: center;
 		flex-basis: 30%;
 	}
-	.mission h2 { 
+	.mission h2 {
 		// margin-bottom: 0;
 		font-size: 1.25em;
 		color: $blue-color;
