--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -14,7 +14,7 @@
 .page-content .wrapper {
   background-color: $light-text-color;
   padding-top: 2em;
-  padding-bottom: 1em;
+  padding-bottom: 5em;
 }
 
 .page-heading {
